--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ unityProject2DActionGameA/Assets/IgnoreFiles(UnityAssets)/Plugins/UniRx/Scripts/
 unityProject2DActionGameA/Assets/IgnoreFiles(UnityAssets)/
 unityProject2DActionGameA/ProjectSettings/
 unityProject2DActionGameA/UserSettings/
+unityProject2DActionGameA/Assets/Plugins/
