--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,5 @@ unityProject2DActionGameA/Assets/IgnoreFiles(UnityAssets)/
 unityProject2DActionGameA/ProjectSettings/
 unityProject2DActionGameA/UserSettings/
 unityProject2DActionGameA/Assets/Plugins/
+NoAlly/Assets/IgnoreFiles(UnityAssets)/Footstep(Snow and Grass)/StepsLoop/snow.meta
+NoAlly/Assets/IgnoreFiles(UnityAssets)/
