--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ unityProject2DActionGameA/UserSettings/
 unityProject2DActionGameA/Assets/Plugins/
 NoAlly/Assets/IgnoreFiles(UnityAssets)/Footstep(Snow and Grass)/StepsLoop/snow.meta
 NoAlly/Assets/IgnoreFiles(UnityAssets)/
+NoAlly/Assets/Plugins/
